# tinyllava-mixtera

./: .gitignore  compute_dataset_sizes.py  eval_benchmark_toolkit.sbatch  eval_benchmark_toolkit_mixtera-llava_balanced.err  eval_image_question_answering.sbatch  eval_image_question_answering_mixtera-llava_balanced.err  generate_mixtures.py  launcher.py  pyproject.toml  register_dataset.py  register_dataset.sbatch  register_llava_output.err  submit_runs.py
configs/: train.yaml
configs/connector/: mlp.yaml  qformer.yaml  resampler.yaml
configs/llm/: phi.yaml  tinyllama.yaml
configs/mixture/: doremi.yaml  doremi_best-effort.yaml  doremi_strict.yaml  inferring_best-effort.yaml  inferring_strict.yaml  llava_1.yaml  llava_2.yaml  llava_3.yaml  llava_4.yaml  mix_100_best-effort.yaml  mix_100_strict.yaml  mix_101_best-effort.yaml  mix_101_strict.yaml  mix_102_best-effort.yaml  mix_102_strict.yaml  mix_103_best-effort.yaml  mix_103_strict.yaml  mix_104_best-effort.yaml  (+248 more)
mixtera_scripts/: eval_benchmark_toolkit.sbatch  eval_image_question_answering.err  eval_image_question_answering.sbatch  finetune.err  finetune.sbatch  finetune_base.err  finetune_base.sbatch  finetune_doremi.err  finetune_llama.sbatch  finetune_phi.err  finetune_test_epoch.err  finetune_tinyllama.err  finetune_tinyllama_coco50_vg10_text40.err  finetune_tinyllama_coco50_vg25_text25.err  finetune_tinyllama_coco50_vg40_text10.err  finetune_uniform.err  pretrain.err  pretrain.sbatch  pretrain_tinyllama.err  pretrain_tinyllama.sbatch  register_dataset.py  register_dataset.sbatch  register_llava_output.err
(+52 files in other folders)
