[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyllava"
version = "1.0.0"
description = "A Framework of Small-scale Large Multimodal Models."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "tiktoken", "openpyxl", "tensorboardX",
    "transformers", "tokenizers==0.19.0", "sentencepiece", "shortuuid",
    "accelerate==0.27.2", "bitsandbytes==0.41.0", "peft==0.10.0",
    "pydantic>=1", "markdown2[all]", "numpy==1.26.4",
    "gradio==3.35.2", "gradio_client==0.2.9",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
    "deepspeed==0.16.3", "ninja", "wandb",
]

[project.optional-dependencies]
train = ["deepspeed", "ninja", "wandb"]

[project.urls]
"Homepage" = "https://github.com/DLCV-BUAA/TinyLLaVABench"
"Bug Tracker" = "https://github.com/DLCV-BUAA/TinyLLaVABench/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

